# LeanAlgo

./: .gitignore  README.md  lean.json  pyproject.toml
algo/: config.json  main.py
leanalgo/: __init__.py  algorithm.py  main.py  models.py
